--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,18 +9,29 @@ html {
   height: 100%;
 }
 
-.legend {
+.legend-control {
   padding: 10px;
   line-height: 18px;
   color: #555;
-  background-color: #fff;
+  background-color: #aaa;
   border-radius: 5px;
 }
 
-.legend i {
+.legend-control i {
   float: left;
   width: 18px;
   height: 18px;
   margin-right: 8px;
   opacity: 0.7;
+}
+
+.leaflet-bottom.leaflet-left {
+  width: 90%;
+}
+
+.leaflet-control-container .leaflet-timeline-controls {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  margin-bottom: 15px;
 }
